--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -4,29 +4,174 @@
   outline: 0;
   padding: 0;
   margin: 0;
+  text-decoration-line: none;
 }
-
 header {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  background-color: #f5db13;
+  background-color: #F5DB13;
+  box-shadow: 0 3px 21px -5px rgba(0, 0, 0, 0.75);
+  z-index: 1;
 }
-
+/*logo*/
 header > img {
-  width: 64px;
-
+  width: 128px;
+  right: 500px;
+  top: 14px;
+  margin-left: 170px;
 }
-
 .navbar {
   display: none;
   font-size: 50px;
 }
-
 .navbar > a {
   font-size: 1.5rem;
-  margin: 0 20px 0 0;
+  margin: 0 30px 0 0;
 
 }
+@media(min-width: 481px) {
+  header {
+    padding: 20px 10
+  }
+}
+@media(min-width: 650px) {
+  .navbar {
+    display: flex;
+  }
+}
+header > nav > a {
+  text-decoration: none;
+  border-bottom: 3px solid #F5DB13;
+  color: black;
+  
+}
+header > nav > a:hover {
+  border-bottom: 3px solid black;
+  height: 100%;
+}
+main{
+  background-color: #212121;
+}
+/*caixa*/
+.container-principal{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  left: 10.97%;
+  right: 10.9%;
+  top: 12.89%;
+  bottom: 31.34%;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+/* h1 */
+main h1{
+  display: flex;
+  padding: 20px;
+  font-family: Karla;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 72px;
+  line-height: 84px;
+  letter-spacing: 4px;
+  color: #FFFFFF;
+  margin-left: 170px;
+}
+main h2{
+  font-family: Karla,sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 72px;
+  line-height: 84px;
+  letter-spacing: 4px;
+  color: #FDFDFD;
+}
+/* legendaries-paragraph */
+main p{
+  font-family: Source Sans Pro;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+}
+main .story-mew{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+main .story-mew p{
+  max-width: 400px;
+}
+main .story-mew img{
+  margin-right: 200px;
+  height: 300px;
+}
+.linha{
+  height: 1px;
+  width: 80%;
+  background-color: white;
+  margin-bottom: 40px;
+}
+.atr{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right:50px;
+}
+.atr p:first-child{
+  font-family: Karla, serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  color: #FDFDFD;
+}
+.atributos{
+  max-width: 500px;
+}
+.barra-atributos{
+  height: 7px;
+  width: 150px;
+  background-color: white;
+  border-radius:30px ;
+  margin-right: 0;
+}
+.barra-porcen{
+  height: 7px;
+  width: 100px;
+  background-color: #F2B807;
+  border-radius:30px ;
+}
+.container-atr{
+  display: flex;
+  align-items: center;
+  flex-wrap:wrap ;
+}
+.legendaryCard{
+  height: 200px;
+
+}
+.container-selec{
+  margin-top: 30px;
+}
+.btn{
+  height: 50px;
+  margin-bottom: 70px;
+  cursor: pointer;
+}
+.left{
+  transform: rotate(180deg);
+}
+/*fundo*/
+body {
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+  background: #212121;
+  }
