--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -7,6 +7,7 @@
   text-decoration-line: none;
 }
 header {
+  font-family: 'Karla', sans-serif;
   display: flex;
   flex-direction: row;
   align-items: center;
